[package]
name = "nixit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = [ "derive" ] }
tree-sitter = "0.20.10"
tree-sitter-edit = "0.3.0"
tree-sitter-nix = { git = "https://github.com/nix-community/tree-sitter-nix", version = "0.0.1" }
